several version adjustments