@@ -37,18 +37,18 @@ Contributors:
 				"The type org.w3c.dom.Document is not accessible".
 				The cause for Java11/Maven/Tycho being unable to access a type of a Java module (which is part of
 				the implicitly included modules) is unclear.
-			-->
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-compiler-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
 					<compilerArgs>
-			            <arg>--add-modules</arg>
+			            <arg>- -add-modules</arg>
 			            <arg>java.xml</arg>
 			        </compilerArgs>
 				</configuration>
 			</plugin>
+			-->
 			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
